Fix TOC sticky: add align-self stretch to TOC

--- a/cms_package/public/css/style.css
+++ b/cms_package/public/css/style.css
@@ -1074,6 +1074,7 @@ input[type="email"]:focus {
   width: 220px;
   flex-shrink: 0;
   padding: 0;
+  align-self: stretch;
 }
 
 @media (min-width: 1280px) {
